--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     ],
     "rules": {
       "semi": 0,
+      "react/state-in-constructor": ["error", "never"],
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "prettier/prettier": [
         "error", {
